--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <div class="laptop-camera"></div>
                             <div class="laptop-video">
                                 <!-- Simple video player with custom thumbnail -->
-                                <video id="laptop-video" preload="metadata" poster="images/course.webp" width="100%" height="100%" controls playsinline>
-                                    <source src="demovideo/demo.mp4" type="video/mp4">
+                                <video id="laptop-video" preload="metadata" poster="course.webp" width="100%" height="100%" controls playsinline>
+                                    <source src="demo(1)(1).mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                                 <!-- Adding center play button -->
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="course-image">
-                    <img src="images/course.webp">
+                    <img src="course.webp">
                     <div class="course-tag">Bestseller</div>
                 </div>
             </div>
@@ -361,14 +361,14 @@
             
             <div class="partners-container">
                 <div class="partner-item">
-                    <img src="images/part2.avif" alt="NeetCode">
+                    <img src="part2.avif" alt="NeetCode">
                     <div class="partner-overlay">
                         <h4>NeetCode</h4>
                         <p>Cloud & AI Solutions</p>
                     </div>
                 </div>
                 <div class="partner-item">
-                    <img src="images/part1.avif" alt="3Blue1Brown">
+                    <img src="part1.avif" alt="3Blue1Brown">
                     <div class="partner-overlay">
                         <h4>3Blue1Brown</h4>
                         <p>Enterprise Technology</p>
